content/kapacitor/v1.0/nodes/alert_node.md
---
title: AlertNode
note: Auto generated by tickdoc

menu:
  kapacitor_1_0:
    name: Alert
    identifier: alert_node
    weight: 10
    parent: nodes
---

An [AlertNode](/kapacitor/v1.0/nodes/alert_node/) can trigger an event of varying severity levels, 
and pass the event to alert handlers. The criteria for triggering 
an alert is specified via a [lambda expression](/kapacitor/latest/tick/expr/). 
See [AlertNode.Info,](/kapacitor/v1.0/nodes/alert_node/#info) [AlertNode.Warn,](/kapacitor/v1.0/nodes/alert_node/#warn) and [AlertNode.Crit](/kapacitor/v1.0/nodes/alert_node/#crit) below. 

Different event handlers can be configured for each [AlertNode.](/kapacitor/v1.0/nodes/alert_node/) 
Some handlers like Email, HipChat, Sensu, Slack, OpsGenie, VictorOps, PagerDuty, Telegram and Talk have a configuration 
option &#39;global&#39; that indicates that all alerts implicitly use the handler. 

Available event handlers: 

* log -- log alert data to file. 
* post -- HTTP POST data to a specified URL. 
* email -- Send and email with alert data. 
* exec -- Execute a command passing alert data over STDIN. 
* HipChat -- Post alert message to HipChat room. 
* Alerta -- Post alert message to Alerta. 
* Sensu -- Post alert message to Sensu client. 
* Slack -- Post alert message to Slack channel. 
* OpsGenie -- Send alert to OpsGenie. 
* VictorOps -- Send alert to VictorOps. 
* PagerDuty -- Send alert to PagerDuty. 
* Talk -- Post alert message to Talk client. 
* Telegram -- Post alert message to Telegram client. 

See below for more details on configuring each handler. 

Each event that gets sent to a handler contains the following alert data: 

* ID -- the ID of the alert, user defined. 
* Message -- the alert message, user defined. 
* Details -- the alert details, user defined HTML content. 
* Time -- the time the alert occurred. 
* Duration -- the duration of the alert in nanoseconds. 
* Level -- one of OK, INFO, WARNING or CRITICAL. 
* Data -- influxql.Result containing the data that triggered the alert. 

Events are sent to handlers if the alert is in a state other than &#39;OK&#39; 
or the alert just changed to the &#39;OK&#39; state from a non &#39;OK&#39; state (a.k.a. the alert recovered). 
Using the [AlertNode.StateChangesOnly](/kapacitor/v1.0/nodes/alert_node/#statechangesonly) property events will only be sent to handlers 
if the alert changed state. 

It is valid to configure multiple alert handlers, even with the same type. 

Example: 


```javascript
   stream
           .groupBy('service')
       |alert()
           .id('kapacitor/{{ index .Tags "service" }}')
           .message('{{ .ID }} is {{ .Level }} value:{{ index .Fields "value" }}')
           .info(lambda: "value" > 10)
           .warn(lambda: "value" > 20)
           .crit(lambda: "value" > 30)
           .post("http://example.com/api/alert")
           .post("http://another.example.com/api/alert")
           .email('oncall@example.com')
```


Each expression maintains its own state. 
The order of execution for the expressions is not considered to be deterministic. 
For each point an expression may or may not be evaluated. 
If no expression is true then the alert is considered to be in the OK state. 

Kapacitor supports alert reset expressions. 
This way when an alert enters a state, it can only be lowered in severity if its reset expression evaluates to true. 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
           .where(lambda: "host" == 'serverA')
           .groupBy('host')
       |alert()
           .info(lambda: "value" > 60)
           .infoReset(lambda: "value" < 50)
           .warn(lambda: "value" > 70)
           .warnReset(lambda: "value" < 60)
           .crit(lambda: "value" > 80)
           .critReset(lambda: "value" < 70)
```

For example given the following values: 
61 73 64 85 62 56 47 
The corresponding alert states are: 
INFO WARNING WARNING CRITICAL INFO INFO OK 

Available Statistics: 

* alerts_triggered -- Total number of alerts triggered 
* oks_triggered -- Number of OK alerts triggered 
* infos_triggered -- Number of Info alerts triggered 
* warns_triggered -- Number of Warn alerts triggered 
* crits_triggered -- Number of Crit alerts triggered 



Index
-----

### Properties

-	[Alerta](/kapacitor/v1.0/nodes/alert_node/#alerta)
-	[All](/kapacitor/v1.0/nodes/alert_node/#all)
-	[Crit](/kapacitor/v1.0/nodes/alert_node/#crit)
-	[CritReset](/kapacitor/v1.0/nodes/alert_node/#critreset)
-	[Details](/kapacitor/v1.0/nodes/alert_node/#details)
-	[DurationField](/kapacitor/v1.0/nodes/alert_node/#durationfield)
-	[Email](/kapacitor/v1.0/nodes/alert_node/#email)
-	[Exec](/kapacitor/v1.0/nodes/alert_node/#exec)
-	[Flapping](/kapacitor/v1.0/nodes/alert_node/#flapping)
-	[HipChat](/kapacitor/v1.0/nodes/alert_node/#hipchat)
-	[History](/kapacitor/v1.0/nodes/alert_node/#history)
-	[Id](/kapacitor/v1.0/nodes/alert_node/#id)
-	[IdField](/kapacitor/v1.0/nodes/alert_node/#idfield)
-	[IdTag](/kapacitor/v1.0/nodes/alert_node/#idtag)
-	[Info](/kapacitor/v1.0/nodes/alert_node/#info)
-	[InfoReset](/kapacitor/v1.0/nodes/alert_node/#inforeset)
-	[LevelField](/kapacitor/v1.0/nodes/alert_node/#levelfield)
-	[LevelTag](/kapacitor/v1.0/nodes/alert_node/#leveltag)
-	[Log](/kapacitor/v1.0/nodes/alert_node/#log)
-	[Message](/kapacitor/v1.0/nodes/alert_node/#message)
-	[NoRecoveries](/kapacitor/v1.0/nodes/alert_node/#norecoveries)
-	[OpsGenie](/kapacitor/v1.0/nodes/alert_node/#opsgenie)
-	[PagerDuty](/kapacitor/v1.0/nodes/alert_node/#pagerduty)
-	[Post](/kapacitor/v1.0/nodes/alert_node/#post)
-	[Sensu](/kapacitor/v1.0/nodes/alert_node/#sensu)
-	[Slack](/kapacitor/v1.0/nodes/alert_node/#slack)
-	[StateChangesOnly](/kapacitor/v1.0/nodes/alert_node/#statechangesonly)
-	[Talk](/kapacitor/v1.0/nodes/alert_node/#talk)
-	[Telegram](/kapacitor/v1.0/nodes/alert_node/#telegram)
-	[VictorOps](/kapacitor/v1.0/nodes/alert_node/#victorops)
-	[Warn](/kapacitor/v1.0/nodes/alert_node/#warn)
-	[WarnReset](/kapacitor/v1.0/nodes/alert_node/#warnreset)

### Chaining Methods

-	[Alert](/kapacitor/v1.0/nodes/alert_node/#alert)
-	[Bottom](/kapacitor/v1.0/nodes/alert_node/#bottom)
-	[Combine](/kapacitor/v1.0/nodes/alert_node/#combine)
-	[Count](/kapacitor/v1.0/nodes/alert_node/#count)
-	[Deadman](/kapacitor/v1.0/nodes/alert_node/#deadman)
-	[Default](/kapacitor/v1.0/nodes/alert_node/#default)
-	[Delete](/kapacitor/v1.0/nodes/alert_node/#delete)
-	[Derivative](/kapacitor/v1.0/nodes/alert_node/#derivative)
-	[Difference](/kapacitor/v1.0/nodes/alert_node/#difference)
-	[Distinct](/kapacitor/v1.0/nodes/alert_node/#distinct)
-	[Elapsed](/kapacitor/v1.0/nodes/alert_node/#elapsed)
-	[Eval](/kapacitor/v1.0/nodes/alert_node/#eval)
-	[First](/kapacitor/v1.0/nodes/alert_node/#first)
-	[Flatten](/kapacitor/v1.0/nodes/alert_node/#flatten)
-	[GroupBy](/kapacitor/v1.0/nodes/alert_node/#groupby)
-	[HoltWinters](/kapacitor/v1.0/nodes/alert_node/#holtwinters)
-	[HoltWintersWithFit](/kapacitor/v1.0/nodes/alert_node/#holtwinterswithfit)
-	[HttpOut](/kapacitor/v1.0/nodes/alert_node/#httpout)
-	[InfluxDBOut](/kapacitor/v1.0/nodes/alert_node/#influxdbout)
-	[Join](/kapacitor/v1.0/nodes/alert_node/#join)
-	[Last](/kapacitor/v1.0/nodes/alert_node/#last)
-	[Max](/kapacitor/v1.0/nodes/alert_node/#max)
-	[Mean](/kapacitor/v1.0/nodes/alert_node/#mean)
-	[Median](/kapacitor/v1.0/nodes/alert_node/#median)
-	[Min](/kapacitor/v1.0/nodes/alert_node/#min)
-	[Mode](/kapacitor/v1.0/nodes/alert_node/#mode)
-	[MovingAverage](/kapacitor/v1.0/nodes/alert_node/#movingaverage)
-	[Percentile](/kapacitor/v1.0/nodes/alert_node/#percentile)
-	[Sample](/kapacitor/v1.0/nodes/alert_node/#sample)
-	[Shift](/kapacitor/v1.0/nodes/alert_node/#shift)
-	[Spread](/kapacitor/v1.0/nodes/alert_node/#spread)
-	[Stats](/kapacitor/v1.0/nodes/alert_node/#stats)
-	[Stddev](/kapacitor/v1.0/nodes/alert_node/#stddev)
-	[Sum](/kapacitor/v1.0/nodes/alert_node/#sum)
-	[Top](/kapacitor/v1.0/nodes/alert_node/#top)
-	[Union](/kapacitor/v1.0/nodes/alert_node/#union)
-	[Where](/kapacitor/v1.0/nodes/alert_node/#where)
-	[Window](/kapacitor/v1.0/nodes/alert_node/#window)

Properties
----------

Property methods modify state on the calling node.
They do not add another node to the pipeline, and always return a reference to the calling node.
Property methods are marked using the `.` operator.


### Alerta

Send the alert to Alerta. 

Example: 


```javascript
    [alerta]
      enabled = true
      url = "https://alerta.yourdomain"
      token = "9hiWoDOZ9IbmHsOTeST123ABciWTIqXQVFDo63h9"
      environment = "Production"
      origin = "Kapacitor"
```

In order to not post a message every alert interval 
use [AlertNode.StateChangesOnly](/kapacitor/v1.0/nodes/alert_node/#statechangesonly) so that only events 
where the alert changed state are sent to Alerta. 

Send alerts to Alerta. The resource and event properties are required. 

Example: 


```javascript
    stream
         |alert()
             .alerta()
                 .resource('Hostname or service')
                 .event('Something went wrong')
```

Alerta also accepts optional alert information. 

Example: 


```javascript
    stream
         |alert()
             .alerta()
                 .resource('Hostname or service')
                 .event('Something went wrong')
                 .environment('Development')
                 .group('Dev. Servers')
```

NOTE: Alerta cannot be configured globally because of its required properties. 


```javascript
node.alerta()
```

#### Alerta Environment

Alerta environment. 
Can be a template and has access to the same data as the [AlertNode.Details](/kapacitor/v1.0/nodes/alert_node/#details) property. 
Defaut is set from the configuration. 


```javascript
node.alerta()
      .environment(value string)
```


#### Alerta Event

Alerta event. 
Can be a template and has access to the same data as the idInfo property. 
Default: {{ .ID }} 


```javascript
node.alerta()
      .event(value string)
```


#### Alerta Group

Alerta group. 
Can be a template and has access to the same data as the [AlertNode.Details](/kapacitor/v1.0/nodes/alert_node/#details) property. 
Default: {{ .Group }} 


```javascript
node.alerta()
      .group(value string)
```


#### Alerta Origin

Alerta origin. 
If empty uses the origin from the configuration. 


```javascript
node.alerta()
      .origin(value string)
```


#### Alerta Resource

Alerta resource. 
Can be a template and has access to the same data as the [AlertNode.Details](/kapacitor/v1.0/nodes/alert_node/#details) property. 
Default: {{ .Name }} 


```javascript
node.alerta()
      .resource(value string)
```


#### Alerta Services

List of effected services. 
If not specified defaults to the Name of the stream. 


```javascript
node.alerta()
      .services(service ...string)
```


#### Alerta Token

Alerta authentication token. 
If empty uses the token from the configuration. 


```javascript
node.alerta()
      .token(value string)
```


#### Alerta Value

Alerta value. 
Can be a template and has access to the same data as the [AlertNode.Details](/kapacitor/v1.0/nodes/alert_node/#details) property. 
Default is an empty string. 


```javascript
node.alerta()
      .value(value string)
```



### All

Indicates an alert should trigger only if all points in a batch match the criteria. 
Does not apply to stream alerts. 


```javascript
node.all()
```


### Crit

Filter expression for the CRITICAL alert level. 
An empty value indicates the level is invalid and is skipped. 


```javascript
node.crit(value ast.LambdaNode)
```


### CritReset

Filter expression for reseting the CRITICAL alert level to lower level. 


```javascript
node.critReset(value ast.LambdaNode)
```


### Details

Template for constructing a detailed HTML message for the alert. 
The same template data is available as the [AlertNode.Message](/kapacitor/v1.0/nodes/alert_node/#message) property, 
in addition to a Message field that contains the rendered Message value. 

The intent is that the Message property be a single line summary while the 
Details property is a more detailed message possibly spanning multiple lines, 
and containing HTML formatting. 

This template is rendered using the html/template package in Go so that 
safe and valid HTML can be generated. 

The `json` method is available within the template to convert any variable to a valid 
JSON string. 

Example: 


```javascript
    |alert()
       .id('{{ .Name }}')
       .details('''
<h1>{{ .ID }}</h1>
<b>{{ .Message }}</b>
Value: {{ index .Fields "value" }}
''')
       .email()
```

Default: {{ json . }} 


```javascript
node.details(value string)
```


### DurationField

Optional field key to add the alert duration to the data. 
The duration is always in units of nanoseconds. 


```javascript
node.durationField(value string)
```


### Email

Email the alert data. 

If the To list is empty, the To addresses from the configuration are used. 
The email subject is the [AlertNode.Message](/kapacitor/v1.0/nodes/alert_node/#message) property. 
The email body is the [AlertNode.Details](/kapacitor/v1.0/nodes/alert_node/#details) property. 
The emails are sent as HTML emails and so the body can contain html markup. 

If the &#39;smtp&#39; section in the configuration has the option: global = true 
then all alerts are sent via email without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    |alert()
       .id('{{ .Name }}')
       // Email subject
       .meassage('{{ .ID }}:{{ .Level }}')
       //Email body as HTML
       .details('''
<h1>{{ .ID }}</h1>
<b>{{ .Message }}</b>
Value: {{ index .Fields "value" }}
''')
       .email()
```

Send an email with custom subject and body. 

Example: 


```javascript
     [smtp]
       enabled = true
       host = "localhost"
       port = 25
       username = ""
       password = ""
       from = "kapacitor@example.com"
       to = ["oncall@example.com"]
       # Set global to true so all alert trigger emails.
       global = true
       state-changes-only =  true
```

Example: 


```javascript
    stream
         |alert()
```

Send email to &#39;oncall@example.com&#39; from &#39;kapacitor@example.com&#39; 



```javascript
node.email(to ...string)
```

#### Email To

Define the To addresses for the email alert. 
Multiple calls append to the existing list of addresses. 
If empty uses the addresses from the configuration. 

Example: 


```javascript
    |alert()
       .id('{{ .Name }}')
       // Email subject
       .meassage('{{ .ID }}:{{ .Level }}')
       //Email body as HTML
       .details('''
<h1>{{ .ID }}</h1>
<b>{{ .Message }}</b>
Value: {{ index .Fields "value" }}
''')
       .email('admin@example.com')
         .to('oncall@example.com')
         .to('support@example.com')
```

All three email addresses will receive the alert message. 

Passing addresses to the `email` property directly or using the `email.to` property is the same. 


```javascript
node.email(to ...string)
      .to(to ...string)
```



### Exec

Execute a command whenever an alert is triggered and pass the alert data over STDIN in JSON format. 


```javascript
node.exec(executable string, args ...string)
```


### Flapping

Perform flap detection on the alerts. 
The method used is similar method to Nagios: 
https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/3/en/flapping.html 

Each different alerting level is considered a different state. 
The low and high thresholds are inverted thresholds of a percentage of state changes. 
Meaning that if the percentage of state changes goes above the `high` 
threshold, the alert enters a flapping state. The alert remains in the flapping state 
until the percentage of state changes goes below the `low` threshold. 
Typical values are low: 0.25 and high: 0.5. The percentage values represent the number state changes 
over the total possible number of state changes. A percentage change of 0.5 means that the alert changed 
state in half of the recorded history, and remained the same in the other half of the history. 


```javascript
node.flapping(low float64, high float64)
```


### HipChat


If the &#39;hipchat&#39; section in the configuration has the option: global = true 
then all alerts are sent to HipChat without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [hipchat]
      enabled = true
      url = "https://orgname.hipchat.com/v2/room"
      room = "Test Room"
      token = "9hiWoDOZ9IbmHsOTeST123ABciWTIqXQVFDo63h9"
      global = true
      state-changes-only = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to HipChat using default room &#39;Test Room&#39;. 


```javascript
node.hipChat()
```

#### HipChat Room

HipChat room in which to post messages. 
If empty uses the channel from the configuration. 


```javascript
node.hipChat()
      .room(value string)
```


#### HipChat Token

HipChat authentication token. 
If empty uses the token from the configuration. 


```javascript
node.hipChat()
      .token(value string)
```



### History

Number of previous states to remember when computing flapping levels and 
checking for state changes. 
Minimum value is 2 in order to keep track of current and previous states. 

Default: 21 


```javascript
node.history(value int64)
```


### Id

Template for constructing a unique ID for a given alert. 

Available template data: 

* Name -- Measurement name. 
* TaskName -- The name of the task 
* Group -- Concatenation of all group-by tags of the form [key=value,]+. 
If no groupBy is performed equal to literal &#39;nil&#39;. 
* Tags -- Map of tags. Use &#39;{{ index .Tags &#34;key&#34; }}&#39; to get a specific tag value. 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
           .groupBy('cpu')
       |alert()
           .id('kapacitor/{{ .Name }}/{{ .Group }}')
```

ID: kapacitor/cpu/cpu=cpu0, 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
           .groupBy('service')
       |alert()
           .id('kapacitor/{{ index .Tags "service" }}')
```

ID: kapacitor/authentication 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
           .groupBy('service', 'host')
       |alert()
           .id('kapacitor/{{ index .Tags "service" }}/{{ index .Tags "host" }}')
```

ID: kapacitor/authentication/auth001.example.com 

Default: {{ .Name }}:{{ .Group }} 


```javascript
node.id(value string)
```


### IdField

Optional field key to add to the data, containing the alert ID as a string. 


```javascript
node.idField(value string)
```


### IdTag

Optional tag key to use when tagging the data with the alert ID. 


```javascript
node.idTag(value string)
```


### Info

Filter expression for the INFO alert level. 
An empty value indicates the level is invalid and is skipped. 


```javascript
node.info(value ast.LambdaNode)
```


### InfoReset

Filter expression for reseting the INFO alert level to lower level. 


```javascript
node.infoReset(value ast.LambdaNode)
```


### LevelField

Optional field key to add to the data, containing the alert level as a string. 


```javascript
node.levelField(value string)
```


### LevelTag

Optional tag key to use when tagging the data with the alert level. 


```javascript
node.levelTag(value string)
```


### Log

Log JSON alert data to file. One event per line. 
Must specify the absolute path to the log file. 
It will be created if it does not exist. 
Example: 


```javascript
    stream
         |alert()
             .log('/tmp/alert')
```

Example: 


```javascript
    stream
         |alert()
             .log('/tmp/alert')
             .mode(0644)
```



```javascript
node.log(filepath string)
```

#### Log Mode

File&#39;s mode and permissions, default is 0600 
NOTE: The leading 0 is required to interpret the value as an octal integer. 


```javascript
node.log(filepath string)
      .mode(value int64)
```



### Message

Template for constructing a meaningful message for the alert. 

Available template data: 

* ID -- The ID of the alert. 
* Name -- Measurement name. 
* TaskName -- The name of the task 
* Group -- Concatenation of all group-by tags of the form [key=value,]+. 
If no groupBy is performed equal to literal &#39;nil&#39;. 
* Tags -- Map of tags. Use &#39;{{ index .Tags &#34;key&#34; }}&#39; to get a specific tag value. 
* Level -- Alert Level, one of: INFO, WARNING, CRITICAL. 
* Fields -- Map of fields. Use &#39;{{ index .Fields &#34;key&#34; }}&#39; to get a specific field value. 
* Time -- The time of the point that triggered the event. 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
           .groupBy('service', 'host')
       |alert()
           .id('{{ index .Tags "service" }}/{{ index .Tags "host" }}')
           .message('{{ .ID }} is {{ .Level}} value: {{ index .Fields "value" }}')
```

Message: authentication/auth001.example.com is CRITICAL value:42 

Default: {{ .ID }} is {{ .Level }} 


```javascript
node.message(value string)
```


### NoRecoveries

Do not send recovery alerts. 


```javascript
node.noRecoveries()
```


### OpsGenie

Send alert to OpsGenie. 
To use OpsGenie alerting you must first enable the &#39;Alert Ingestion API&#39; 
in the &#39;Integrations&#39; section of OpsGenie. 
Then place the API key from the URL into the &#39;opsgenie&#39; section of the Kapacitor configuration. 

Example: 


```javascript
    [opsgenie]
      enabled = true
      api-key = "xxxxx"
      teams = ["everyone"]
      recipients = ["jim", "bob"]
```

With the correct configuration you can now use OpsGenie in TICKscripts. 

Example: 


```javascript
    stream
         |alert()
             .opsGenie()
```

Send alerts to OpsGenie using the teams and recipients in the configuration file. 

Example: 


```javascript
    stream
         |alert()
             .opsGenie()
             .teams('team_rocket','team_test')
```

Send alerts to OpsGenie with team set to &#39;team_rocket&#39; and &#39;team_test&#39; 

If the &#39;opsgenie&#39; section in the configuration has the option: global = true 
then all alerts are sent to OpsGenie without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [opsgenie]
      enabled = true
      api-key = "xxxxx"
      recipients = ["johndoe"]
      global = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to OpsGenie using the default recipients, found in the configuration. 


```javascript
node.opsGenie()
```

#### OpsGenie Recipients

The list of recipients to be alerted. If empty defaults to the recipients from the configuration. 


```javascript
node.opsGenie()
      .recipients(recipients ...string)
```


#### OpsGenie Teams

The list of teams to be alerted. If empty defaults to the teams from the configuration. 


```javascript
node.opsGenie()
      .teams(teams ...string)
```



### PagerDuty

Send the alert to PagerDuty. 
To use PagerDuty alerting you must first follow the steps to enable a new &#39;Generic API&#39; service. 

From https://developer.pagerduty.com/documentation/integration/events 

1. In your account, under the Services tab, click &#34;Add New Service&#34;. 
2. Enter a name for the service and select an escalation policy. Then, select &#34;Generic API&#34; for the Service Type. 
3. Click the &#34;Add Service&#34; button. 
4. Once the service is created, you&#39;ll be taken to the service page. On this page, you&#39;ll see the &#34;Service key&#34;, which is needed to access the API 

Place the &#39;service key&#39; into the &#39;pagerduty&#39; section of the Kapacitor configuration as the option &#39;service-key&#39;. 

Example: 


```javascript
    [pagerduty]
      enabled = true
      service-key = "xxxxxxxxx"
```

With the correct configuration you can now use PagerDuty in TICKscripts. 

Example: 


```javascript
    stream
         |alert()
             .pagerDuty()
```

If the &#39;pagerduty&#39; section in the configuration has the option: global = true 
then all alerts are sent to PagerDuty without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [pagerduty]
      enabled = true
      service-key = "xxxxxxxxx"
      global = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to PagerDuty. 


```javascript
node.pagerDuty()
```

#### PagerDuty ServiceKey

The service key to use for the alert. 
Defaults to the value in the configuration if empty. 


```javascript
node.pagerDuty()
      .serviceKey(value string)
```



### Post

HTTP POST JSON alert data to a specified URL. 


```javascript
node.post(url string)
```


### Sensu

Send the alert to Sensu. 

Example: 


```javascript
    [sensu]
      enabled = true
      url = "http://sensu:3030"
      source = "Kapacitor"
```

Example: 


```javascript
    stream
         |alert()
             .sensu()
```

Send alerts to Sensu client. 



```javascript
node.sensu()
```


### Slack

Send the alert to Slack. 
To allow Kapacitor to post to Slack, 
go to the URL https://slack.com/services/new/incoming-webhook 
and create a new incoming webhook and place the generated URL 
in the &#39;slack&#39; configuration section. 

Example: 


```javascript
    [slack]
      enabled = true
      url = "https://hooks.slack.com/services/xxxxxxxxx/xxxxxxxxx/xxxxxxxxxxxxxxxxxxxxxxxx"
      channel = "#general"
```

In order to not post a message every alert interval 
use [AlertNode.StateChangesOnly](/kapacitor/v1.0/nodes/alert_node/#statechangesonly) so that only events 
where the alert changed state are posted to the channel. 

Example: 


```javascript
    stream
         |alert()
             .slack()
```

Send alerts to Slack channel in the configuration file. 

Example: 


```javascript
    stream
         |alert()
             .slack()
             .channel('#alerts')
```

Send alerts to Slack channel &#39;#alerts&#39; 

Example: 


```javascript
    stream
         |alert()
             .slack()
             .channel('@jsmith')
```

Send alert to user &#39;@jsmith&#39; 

If the &#39;slack&#39; section in the configuration has the option: global = true 
then all alerts are sent to Slack without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [slack]
      enabled = true
      url = "https://hooks.slack.com/services/xxxxxxxxx/xxxxxxxxx/xxxxxxxxxxxxxxxxxxxxxxxx"
      channel = "#general"
      global = true
      state-changes-only = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to Slack using default channel &#39;#general&#39;. 


```javascript
node.slack()
```

#### Slack Channel

Slack channel in which to post messages. 
If empty uses the channel from the configuration. 


```javascript
node.slack()
      .channel(value string)
```



### StateChangesOnly

Only sends events where the state changed. 
Each different alert level OK, INFO, WARNING, and CRITICAL 
are considered different states. 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
       |window()
            .period(10s)
            .every(10s)
       |alert()
           .crit(lambda: "value" > 10)
           .stateChangesOnly()
           .slack()
```

If the &#34;value&#34; is greater than 10 for a total of 60s, then 
only two events will be sent. First, when the value crosses 
the threshold, and second, when it falls back into an OK state. 
Without stateChangesOnly, the alert would have triggered 7 times: 
6 times for each 10s period where the condition was met and once more 
for the recovery. 

An optional maximum interval duration can be provided. 
An event will not be ignore (aka trigger an alert) if more than the maximum interval has elapsed 
since the last alert. 

Example: 


```javascript
   stream
       |from()
           .measurement('cpu')
       |window()
            .period(10s)
            .every(10s)
       |alert()
           .crit(lambda: "value" > 10)
           .stateChangesOnly(10m)
           .slack()
```

The abvove usage will only trigger alerts to slack on state changes or at least every 10 minutes. 



```javascript
node.stateChangesOnly(maxInterval ...time.Duration)
```


### Talk

Send the alert to Talk. 
To use Talk alerting you must first follow the steps to create a new incoming webhook. 

1. Go to the URL https:/account.jianliao.com/signin. 
2. Sign in with you account. under the Team tab, click &#34;Integrations&#34;. 
3. Select &#34;Customize service&#34;, click incoming Webhook &#34;Add&#34; button. 
4. After choose the topic to connect with &#34;xxx&#34;, click &#34;Confirm Add&#34; button. 
5. Once the service is created, you&#39;ll see the &#34;Generate Webhook url&#34;. 

Place the &#39;Generate Webhook url&#39; into the &#39;Talk&#39; section of the Kapacitor configuration as the option &#39;url&#39;. 

Example: 


```javascript
    [talk]
      enabled = true
      url = "https://jianliao.com/v2/services/webhook/uuid"
      author_name = "Kapacitor"
```

Example: 


```javascript
    stream
         |alert()
             .talk()
```

Send alerts to Talk client. 



```javascript
node.talk()
```


### Telegram

Send the alert to Telegram. 
To allow Kapacitor to post to Telegram, 

Example: 


```javascript
    [telegram]
      enabled = true
      token = "123456789:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
      chat-id = "xxxxxxxxx"
      parse-mode = "Markdown"
	disable-web-page-preview = true
	disable-notification = false
```

In order to not post a message every alert interval 
use [AlertNode.StateChangesOnly](/kapacitor/v1.0/nodes/alert_node/#statechangesonly) so that only events 
where the alert changed state are posted to the chat-id. 

Example: 


```javascript
    stream
         |alert()
             .telegram()
```

Send alerts to Telegram chat-id in the configuration file. 

Example: 


```javascript
    stream
         |alert()
             .telegram()
             .chatId('xxxxxxx')
```

Send alerts to Telegram user/group &#39;xxxxxx&#39; 

If the &#39;telegram&#39; section in the configuration has the option: global = true 
then all alerts are sent to Telegram without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [telegram]
      enabled = true
      token = "123456789:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
      chat-id = "xxxxxxxxx"
      global = true
      state-changes-only = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to Telegram using default chat-id &#39;xxxxxxxx&#39;. 


```javascript
node.telegram()
```

#### Telegram ChatId

Telegram user/group ID to post messages to. 
If empty uses the chati-d from the configuration. 


```javascript
node.telegram()
      .chatId(value string)
```


#### Telegram DisableNotification

Disables the Notification. If empty defaults to the configuration. 


```javascript
node.telegram()
      .disableNotification()
```


#### Telegram DisableWebPagePreview

Disables the WebPagePreview. If empty defaults to the configuration. 


```javascript
node.telegram()
      .disableWebPagePreview()
```


#### Telegram ParseMode

Parse node, defaults to Mardown 
If empty uses the parse-mode from the configuration. 


```javascript
node.telegram()
      .parseMode(value string)
```



### VictorOps

Send alert to VictorOps. 
To use VictorOps alerting you must first enable the &#39;Alert Ingestion API&#39; 
in the &#39;Integrations&#39; section of VictorOps. 
Then place the API key from the URL into the &#39;victorops&#39; section of the Kapacitor configuration. 

Example: 


```javascript
    [victorops]
      enabled = true
      api-key = "xxxxx"
      routing-key = "everyone"
```

With the correct configuration you can now use VictorOps in TICKscripts. 

Example: 


```javascript
    stream
         |alert()
             .victorOps()
```

Send alerts to VictorOps using the routing key in the configuration file. 

Example: 


```javascript
    stream
         |alert()
             .victorOps()
             .routingKey('team_rocket')
```

Send alerts to VictorOps with routing key &#39;team_rocket&#39; 

If the &#39;victorops&#39; section in the configuration has the option: global = true 
then all alerts are sent to VictorOps without the need to explicitly state it 
in the TICKscript. 

Example: 


```javascript
    [victorops]
      enabled = true
      api-key = "xxxxx"
      routing-key = "everyone"
      global = true
```

Example: 


```javascript
    stream
         |alert()
```

Send alert to VictorOps using the default routing key, found in the configuration. 


```javascript
node.victorOps()
```

#### VictorOps RoutingKey

The routing key to use for the alert. 
Defaults to the value in the configuration if empty. 


```javascript
node.victorOps()
      .routingKey(value string)
```



### Warn

Filter expression for the WARNING alert level. 
An empty value indicates the level is invalid and is skipped. 


```javascript
node.warn(value ast.LambdaNode)
```


### WarnReset

Filter expression for reseting the WARNING alert level to lower level. 


```javascript
node.warnReset(value ast.LambdaNode)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node.
They do not modify the calling node.
Chaining methods are marked using the `|` operator.


### Alert

Create an alert node, which can trigger alerts. 


```javascript
node|alert()
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Bottom

Select the bottom `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|bottom(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Combine

Combine this node with itself. The data are combined on timestamp. 


```javascript
node|combine(expressions ...ast.LambdaNode)
```

Returns: [CombineNode](/kapacitor/v1.0/nodes/combine_node/)


### Count

Count the number of points. 


```javascript
node|count(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Deadman

Helper function for creating an alert on low throughput, a.k.a. deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
    //Do normal processing of data
    data...
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |stats(10s)
            .align()
        |derivative('emitted')
            .unit(10s)
            .nonNegative()
        |alert()
            .id('node \'stream0\' in task \'{{ .TaskName }}\'')
            .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "emitted" | printf "%0.3f" }} points/10s.')
            .crit(lambda: "emitted" <= 100.0)
    //Do normal processing of data
    data...
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v1.0/nodes/alert_node/) is the last piece it can be further modified as usual. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
            .slack()
            .channel('#dead_tasks')
    //Do normal processing of data
    data...
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data
        |deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data...
```



```javascript
node|deadman(threshold float64, interval time.Duration, expr ...ast.LambdaNode)
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Default

Create a node that can set defaults for missing tags or fields. 


```javascript
node|default()
```

Returns: [DefaultNode](/kapacitor/v1.0/nodes/default_node/)


### Delete

Create a node that can delete tags or fields. 


```javascript
node|delete()
```

Returns: [DeleteNode](/kapacitor/v1.0/nodes/delete_node/)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node|derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v1.0/nodes/derivative_node/)


### Difference

Compute the difference between points independent of elapsed time. 


```javascript
node|difference(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Distinct

Produce batch of only the distinct points. 


```javascript
node|distinct(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Elapsed

Compute the elapsed time between points 


```javascript
node|elapsed(field string, unit time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given. 
The results are available to later expressions. 


```javascript
node|eval(expressions ...ast.LambdaNode)
```

Returns: [EvalNode](/kapacitor/v1.0/nodes/eval_node/)


### First

Select the first point. 


```javascript
node|first(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Flatten

Flatten points with similar times into a single point. 


```javascript
node|flatten()
```

Returns: [FlattenNode](/kapacitor/v1.0/nodes/flatten_node/)


### GroupBy

Group the data by a set of tags. 

Can pass literal * to group by all dimensions. 
Example: 


```javascript
    |groupBy(*)
```



```javascript
node|groupBy(tag ...interface{})
```

Returns: [GroupByNode](/kapacitor/v1.0/nodes/group_by_node/)


### HoltWinters

Compute the holt-winters forecast of a data set. 


```javascript
node|holtWinters(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HoltWintersWithFit

Compute the holt-winters forecast of a data set. 
This method also outputs all the points used to fit the data in addition to the forecasted data. 


```javascript
node|holtWintersWithFit(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HttpOut

Create an HTTP output node that caches the most recent data it has received. 
The cached data are available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example, if the task endpoint is at `/kapacitor/v1/tasks/&lt;task_id&gt;` and endpoint is 
`top10`, then the data can be requested from `/kapacitor/v1/tasks/&lt;task_id&gt;/top10`. 


```javascript
node|httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v1.0/nodes/http_out_node/)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node|influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v1.0/nodes/influx_d_b_out_node/)


### Join

Join this node with other nodes. The data are joined on timestamp. 


```javascript
node|join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v1.0/nodes/join_node/)


### Last

Select the last point. 


```javascript
node|last(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Max

Select the maximum point. 


```javascript
node|max(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mean

Compute the mean of the data. 


```javascript
node|mean(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Median

Compute the median of the data. Note, this method is not a selector, 
if you want the median point use `.percentile(field, 50.0)`. 


```javascript
node|median(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Min

Select the minimum point. 


```javascript
node|min(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mode

Compute the mode of the data. 


```javascript
node|mode(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### MovingAverage

Compute a moving average of the last window points. 
No points are emitted until the window is full. 


```javascript
node|movingAverage(field string, window int64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Percentile

Select a point at the given percentile. This is a selector function, no interpolation between points is performed. 


```javascript
node|percentile(field string, percentile float64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node|sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v1.0/nodes/sample_node/)


### Shift

Create a new node that shifts the incoming points or batches in time. 


```javascript
node|shift(shift time.Duration)
```

Returns: [ShiftNode](/kapacitor/v1.0/nodes/shift_node/)


### Spread

Compute the difference between `min` and `max` points. 


```javascript
node|spread(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node|stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v1.0/nodes/stats_node/)


### Stddev

Compute the standard deviation. 


```javascript
node|stddev(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sum

Compute the sum of all values. 


```javascript
node|sum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Top

Select the top `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|top(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node|union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v1.0/nodes/union_node/)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node|where(expression ast.LambdaNode)
```

Returns: [WhereNode](/kapacitor/v1.0/nodes/where_node/)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node|window()
```

Returns: [WindowNode](/kapacitor/v1.0/nodes/window_node/)

